--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title>React Starter Example</title>
+    <title>Prototipo Hub de compositores</title>
     <link rel="stylesheet" href="node_modules/tachyons/css/tachyons.css" />
   </head>
   <body>
