--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
   
   <head>
-    <title>Prototipo Hub de compositores</title>
-    <link rel="stylesheet" href="node_modules/tachyons/css/tachyons.css" />
+    <title>Prototipo Hub de música para compositores</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+      /* On Chrome */
+      .hide-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+      /* For Firefox and IE */
+      .hide-scrollbar {
+          scrollbar-width: none;
+          -ms-overflow-style: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root">
